--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,6 +55,7 @@
   --animate-accordion-down: accordion-down 0.2s ease-out;
   --animate-accordion-up: accordion-up 0.2s ease-out;
   --animate-float: float 3s ease-in-out infinite;
+  --animate-waddle: waddle 1s ease-in-out infinite;
 
   @keyframes accordion-down {
     from {
@@ -85,6 +86,18 @@
 
     50% {
       transform: translateY(-10px);
+    }
+  }
+
+  @keyframes waddle {
+
+    0%,
+    100% {
+      transform: rotate(-3deg);
+    }
+
+    50% {
+      transform: rotate(3deg);
     }
   }
 }
